# Skill_Playground_Bakr101_2026

./: .gitignore  AGENTS.md  Engineering Learning Lifecycle.docx  LICENSE  Makefile  README.md  SDLC-PHRASE-CHEATSHEET.md  SKILL-CATALOG-DOMAIN.md  SKILL-CATALOG.md  SKILL.md  To-do.md  VERSION-1.0-CONVERGENCE-REPORT.md  VERSION-1.0-RELEASE-READINESS.md  pyproject.toml  skills.json
.github/workflows/: mirror-parity.yml  tests.yml  validate.yml
docs/: AGENTS-example-filled.md  AGENTS-template.md  AUDIT-COMPLETENESS.md  AUDIT-METHODOLOGY.md  GLOBAL-AGENT-INSTRUCTIONS-MINIMAL.md  GLOBAL-AGENT-INSTRUCTIONS-PERSONAL-COPYPASTE.md  GLOBAL-AGENT-INSTRUCTIONS-STRICT.md  GLOBAL-AGENT-INSTRUCTIONS.md  catalog-governance.md  final-audit-2026-07-08.md  index.md  merge-proposal.md  publication-summary-2026-07-08.md
scripts/: BASELINE_MANIFEST.sha  check_merged_topology.py  check_skill_mirror_parity.py  deep_audit.py  gate.py  import.allow  pre-commit.hook  refresh_derived_catalog.py  skill_paths.py  sync_and_validate.py  sync_global_to_repo.py  sync_runtime_to_mirror.py  sync_skills_to_global.py  sync_skills_union.py  validate_catalog.py  verify_skill_references.py  warn_allowlist.json
skills/adjacent-disciplines/: SKILL.md
skills/analytical-thinking-patterns/: SKILL.md
skills/api-and-interface-design/: SKILL.md
skills/api-documenter/: SKILL.md
skills/api-tester/: SKILL.md
skills/architecture-decision-records/: 0001-use-postgresql.md  (+4 more)
tests/: conftest.py  test_catalog_fuzz.py  test_deep_qc.py  test_refresh_counts.py  test_sync_and_parity.py  test_validate_catalog.py
(+156 files in other folders)
