[project]
name = "skill-playground"
version = "0.1.0"
description = "Skill Playground repo tooling and catalog validation tests"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-q"
